@@ -148,32 +148,19 @@ const FBSurface& TIASurface::baseSurface(Common::Rect& rect) const
   uInt32 tiaw = myTIA->width(), width = tiaw * 2, height = myTIA->height();
   rect.setBounds(0, 0, width, height);
 
-  // Get Blargg buffer and width
-  uInt32 *blarggBuf, blarggPitch;
-  myTiaSurface->basePtr(blarggBuf, blarggPitch);
-  double blarggXFactor = double(blarggPitch) / width;
-  bool useBlargg = ntscEnabled();
-
   // Fill the surface with pixels from the TIA, scaled 2x horizontally
   uInt32 *buf_ptr, pitch;
   myBaseTiaSurface->basePtr(buf_ptr, pitch);
 
   for(uInt32 y = 0; y < height; ++y)
-  {
     for(uInt32 x = 0; x < width; ++x)
-    {
-      if (useBlargg)
-        *buf_ptr++ = blarggBuf[y * blarggPitch + uInt32(nearbyint(x * blarggXFactor))];
-      else
         *buf_ptr++ = myPalette[*(myTIA->frameBuffer() + y * tiaw + x / 2)];
-    }
-  }
 
   return *myBaseTiaSurface;
 }
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-uInt32 TIASurface::mapIndexedPixel(uInt8 indexedColor, uInt8 shift)
+uInt32 TIASurface::mapIndexedPixel(uInt8 indexedColor, uInt8 shift) const
 {
   return myPalette[indexedColor | shift];
 }
